# InkTrust

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.json  skills-lock.json  test-query.ts  tsconfig.base.json  turbo.json  vercel.json
anchor/: Anchor.toml
anchor/programs/inktrust_core/: Cargo.toml  cargo-build-sbf-child-script-cargo.sh
anchor/programs/inktrust_core/src/: lib.rs  state.rs
anchor/programs/inktrust_core/src/constants/: mod.rs
anchor/programs/inktrust_core/src/errors/: mod.rs
anchor/programs/inktrust_core/src/events/: mod.rs
anchor/programs/inktrust_core/src/instructions/: approve_fax_request.rs  close_fax_request.rs  create_fax_request.rs  execute_transaction.rs  initialize_nonce.rs  mod.rs  multisig_approval.rs  policy_validation.rs
anchor/programs/inktrust_core/src/state/: mod.rs
anchor/programs/inktrust_core/src/utils/: cpi_helpers.rs  mod.rs  nonce.rs  pda.rs  validation.rs
anchor/programs/inktrust_core/tests/: contract_test.rs  integration.rs  litesvm_setup.rs  multisig_test.rs
anchor/tests/: inktrust_core.ts
apps/api-server/: package.json  railway.json  tsconfig.json
apps/api-server/src/: app.ts  db-service.ts  full-demo.ts  index.ts  server.ts  test-circle.ts  test-integration.ts  test-pdf.ts
apps/api-server/src/api/: index.ts
apps/api-server/tests/: e2e.test.ts
apps/web-dashboard/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web-dashboard/src/: middleware.ts
infrastructure/docker/: .env.example  docker-compose.yml  prometheus.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/scripts/: reset-db.sh  seed-db.sh  setup.sh  test-e2e-flow.ts
(+83 files in other folders)
