[package]
name = "inktrust-core"
version = "0.1.0"
description = "InkTrust Core Smart Contract — Fax request lifecycle, family approvals, and spending policy enforcement on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "inktrust_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
